YAPLprueba/YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'inherits'", "'{'", "'}'", 
                     "':'", "'<-'", "';'", "'('", "')'", "','", "'SELF_TYPE'", 
                     "'Int'", "'String'", "'Bool'", "'IO'", "'Object'", 
                     "'if'", "'then'", "'else'", "'fi'", "'while'", "'loop'", 
                     "'pool'", "'let'", "'in'", "'.'", "'@'", "'isvoid'", 
                     "'new'", "'true'", "'false'", "'return'", "'<'", "'>'", 
                     "'<='", "'>='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "STRING", "WS", "COMMENT", "OP", "CLASS_ID" ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_feature = 2
    RULE_attr = 3
    RULE_method = 4
    RULE_formals = 5
    RULE_formal = 6
    RULE_type = 7
    RULE_expr = 8
    RULE_func_return = 9
    RULE_comparation_operators = 10
    RULE_bool_value = 11
    RULE_comparation = 12

    ruleNames =  [ "program", "classDef", "feature", "attr", "method", "formals", 
                   "formal", "type", "expr", "func_return", "comparation_operators", 
                   "bool_value", "comparation" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    ID=39
    INT=40
    STRING=41
    WS=42
    COMMENT=43
    OP=44
    CLASS_ID=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YAPLParser.EOF, 0)

        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ClassDefContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 26
                self.classDef()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(YAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.CLASS_ID)
            else:
                return self.getToken(YAPLParser.CLASS_ID, i)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)




    def classDef(self):

        localctx = YAPLParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(YAPLParser.T__0)
            self.state = 35
            self.match(YAPLParser.CLASS_ID)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 36
                self.match(YAPLParser.T__1)
                self.state = 37
                self.match(YAPLParser.CLASS_ID)


            self.state = 40
            self.match(YAPLParser.T__2)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 41
                self.feature()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(YAPLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr(self):
            return self.getTypedRuleContext(YAPLParser.AttrContext,0)


        def method(self):
            return self.getTypedRuleContext(YAPLParser.MethodContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.attr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(YAPLParser.TypeContext,0)


        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_attr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr" ):
                listener.enterAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr" ):
                listener.exitAttr(self)




    def attr(self):

        localctx = YAPLParser.AttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(YAPLParser.ID)
            self.state = 54
            self.match(YAPLParser.T__4)
            self.state = 55
            self.type_()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 56
                self.match(YAPLParser.T__5)
                self.state = 57
                self.expr(0)


            self.state = 60
            self.match(YAPLParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def formals(self):
            return self.getTypedRuleContext(YAPLParser.FormalsContext,0)


        def type_(self):
            return self.getTypedRuleContext(YAPLParser.TypeContext,0)


        def func_return(self):
            return self.getTypedRuleContext(YAPLParser.Func_returnContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = YAPLParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(YAPLParser.ID)
            self.state = 63
            self.match(YAPLParser.T__7)
            self.state = 64
            self.formals()
            self.state = 65
            self.match(YAPLParser.T__8)
            self.state = 66
            self.match(YAPLParser.T__4)
            self.state = 67
            self.type_()
            self.state = 68
            self.match(YAPLParser.T__2)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3852336234760) != 0):
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(YAPLParser.T__6)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.func_return()
            self.state = 78
            self.match(YAPLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_formals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormals" ):
                listener.enterFormals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormals" ):
                listener.exitFormals(self)




    def formals(self):

        localctx = YAPLParser.FormalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 80
                self.formal()


            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 83
                self.match(YAPLParser.T__9)
                self.state = 84
                self.formal()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(YAPLParser.TypeContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(YAPLParser.ID)
            self.state = 91
            self.match(YAPLParser.T__4)
            self.state = 92
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = YAPLParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 549755942912) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def bool_value(self):
            return self.getTypedRuleContext(YAPLParser.Bool_valueContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.ID)
            else:
                return self.getToken(YAPLParser.ID, i)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.TypeContext)
            else:
                return self.getTypedRuleContext(YAPLParser.TypeContext,i)


        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def OP(self):
            return self.getToken(YAPLParser.OP, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 97
                self.match(YAPLParser.T__16)
                self.state = 100
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 98
                    self.expr(0)
                    pass

                elif la_ == 2:
                    self.state = 99
                    self.bool_value()
                    pass


                self.state = 102
                self.match(YAPLParser.T__17)
                self.state = 103
                self.expr(0)
                self.state = 104
                self.match(YAPLParser.T__18)
                self.state = 105
                self.expr(0)
                self.state = 106
                self.match(YAPLParser.T__19)
                pass

            elif la_ == 2:
                self.state = 108
                self.match(YAPLParser.T__20)
                self.state = 111
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 109
                    self.expr(0)
                    pass

                elif la_ == 2:
                    self.state = 110
                    self.bool_value()
                    pass


                self.state = 113
                self.match(YAPLParser.T__21)
                self.state = 114
                self.expr(0)
                self.state = 115
                self.match(YAPLParser.T__22)
                pass

            elif la_ == 3:
                self.state = 117
                self.match(YAPLParser.T__2)
                self.state = 118
                self.expr(0)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 119
                    self.match(YAPLParser.T__6)
                    self.state = 120
                    self.expr(0)
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.match(YAPLParser.T__3)
                pass

            elif la_ == 4:
                self.state = 128
                self.match(YAPLParser.T__23)
                self.state = 129
                self.match(YAPLParser.ID)
                self.state = 130
                self.match(YAPLParser.T__4)
                self.state = 131
                self.type_()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 132
                    self.match(YAPLParser.T__5)
                    self.state = 133
                    self.expr(0)


                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 136
                    self.match(YAPLParser.T__9)
                    self.state = 137
                    self.match(YAPLParser.ID)
                    self.state = 138
                    self.match(YAPLParser.T__4)
                    self.state = 139
                    self.type_()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==6:
                        self.state = 140
                        self.match(YAPLParser.T__5)
                        self.state = 141
                        self.expr(0)


                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 149
                self.match(YAPLParser.T__24)
                self.state = 150
                self.expr(14)
                pass

            elif la_ == 5:
                self.state = 152
                self.match(YAPLParser.ID)
                self.state = 153
                self.match(YAPLParser.T__5)
                self.state = 154
                self.expr(13)
                pass

            elif la_ == 6:
                self.state = 155
                self.match(YAPLParser.ID)
                self.state = 156
                self.match(YAPLParser.T__7)
                self.state = 157
                self.expr(0)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 158
                    self.match(YAPLParser.T__9)
                    self.state = 159
                    self.expr(0)
                    self.state = 164
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 165
                self.match(YAPLParser.T__8)
                pass

            elif la_ == 7:
                self.state = 167
                self.match(YAPLParser.T__27)
                self.state = 168
                self.expr(9)
                pass

            elif la_ == 8:
                self.state = 169
                self.match(YAPLParser.T__28)
                self.state = 170
                self.match(YAPLParser.ID)
                pass

            elif la_ == 9:
                self.state = 171
                self.match(YAPLParser.ID)
                pass

            elif la_ == 10:
                self.state = 172
                self.match(YAPLParser.INT)
                pass

            elif la_ == 11:
                self.state = 173
                self.match(YAPLParser.STRING)
                pass

            elif la_ == 12:
                self.state = 174
                self.match(YAPLParser.T__29)
                pass

            elif la_ == 13:
                self.state = 175
                self.match(YAPLParser.T__30)
                pass

            elif la_ == 14:
                self.state = 176
                self.match(YAPLParser.T__7)
                self.state = 177
                self.expr(0)
                self.state = 178
                self.match(YAPLParser.T__8)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 217
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 215
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 182
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 183
                        localctx.op = self.match(YAPLParser.OP)
                        self.state = 184
                        self.expr(2)
                        pass

                    elif la_ == 2:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 185
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 186
                        self.match(YAPLParser.T__25)
                        self.state = 187
                        self.match(YAPLParser.ID)
                        self.state = 188
                        self.match(YAPLParser.T__7)
                        self.state = 189
                        self.expr(0)
                        self.state = 194
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==10:
                            self.state = 190
                            self.match(YAPLParser.T__9)
                            self.state = 191
                            self.expr(0)
                            self.state = 196
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 197
                        self.match(YAPLParser.T__8)
                        pass

                    elif la_ == 3:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 199
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 200
                        self.match(YAPLParser.T__26)
                        self.state = 201
                        self.type_()
                        self.state = 202
                        self.match(YAPLParser.T__25)
                        self.state = 203
                        self.match(YAPLParser.ID)
                        self.state = 204
                        self.match(YAPLParser.T__7)
                        self.state = 205
                        self.expr(0)
                        self.state = 210
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==10:
                            self.state = 206
                            self.match(YAPLParser.T__9)
                            self.state = 207
                            self.expr(0)
                            self.state = 212
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 213
                        self.match(YAPLParser.T__8)
                        pass

             
                self.state = 219
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Func_returnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_func_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_return" ):
                listener.enterFunc_return(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_return" ):
                listener.exitFunc_return(self)




    def func_return(self):

        localctx = YAPLParser.Func_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.match(YAPLParser.T__31)
            self.state = 221
            self.expr(0)
            self.state = 222
            self.match(YAPLParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparation_operatorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_comparation_operators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparation_operators" ):
                listener.enterComparation_operators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparation_operators" ):
                listener.exitComparation_operators(self)




    def comparation_operators(self):

        localctx = YAPLParser.Comparation_operatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comparation_operators)
        try:
            self.state = 231
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39, 40, 41]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 225
                self.match(YAPLParser.T__32)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 226
                self.match(YAPLParser.T__33)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 4)
                self.state = 227
                self.match(YAPLParser.T__34)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 5)
                self.state = 228
                self.match(YAPLParser.T__35)
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 6)
                self.state = 229
                self.match(YAPLParser.T__36)
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 7)
                self.state = 230
                self.match(YAPLParser.T__37)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparation(self):
            return self.getTypedRuleContext(YAPLParser.ComparationContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_bool_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_value" ):
                listener.enterBool_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_value" ):
                listener.exitBool_value(self)




    def bool_value(self):

        localctx = YAPLParser.Bool_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bool_value)
        try:
            self.state = 237
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 234
                self.match(YAPLParser.T__29)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 235
                self.match(YAPLParser.T__30)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 236
                self.comparation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.ID)
            else:
                return self.getToken(YAPLParser.ID, i)

        def comparation_operators(self):
            return self.getTypedRuleContext(YAPLParser.Comparation_operatorsContext,0)


        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_comparation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparation" ):
                listener.enterComparation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparation" ):
                listener.exitComparation(self)




    def comparation(self):
